# PattyData

./: ERDB.README  ERDB.erm  ERDB.sql  README.md  newERDB.erm
Attributes/: ConvertMicrosoftAccess2PostgreSQL  README.md
Attributes/20150306/: VA2012-2014_06032015.mdb.sql
Attributes/20150312/: VA2012-2014_12032015.mdb  VA2012-2014_12032015.mdb.sql
Database/: ERDB.erm  ERDB.sql  README.md
Database/dbdocs/: allclasses.html  overview-summary.html
Documents/: PC_DBMS.txt  Patty_Data_team_scrum_tasks.docx  RULES.txt  VIAAPPIAGIS_DIAGRAMS.pptx  ViaAppia.txt
Documents/Instructions/: Configuring_NGINX
Documents/SUM/: 01_overview.tex  02_conceptual_description.tex  02_system_architecture.tex  03_conceptual_description.tex  03_system_architecture.tex  04_data_structure.tex  05_database.tex  06_software.tex  07_future_work.tex  Makefile  VIAAPPIAGIS_DIAGRAMS.pptx  (+2 more)
Footprints/: README.md  VIA_APPIA_SITES_06032015.dbf  VIA_APPIA_SITES_06032015.prj
OSG/converter/: CMakeLists.txt  readme.txt
OSG/converter/CMakeModules/: FindLibLAS.cmake
OSG/converter/src/: FadingLOD.cpp  FadingLOD.h  PointModelLod.cpp  PointModelLod.h  PointQuadTree.cpp  PointQuadTree.h  PointStreamGeometry.cpp  PointStreamGeometry.h  QuadTreeUtils.cpp  QuadTreeUtils.h  main.cpp  osg_ibr.h
OSG/converter/src/libsquish/: alpha.cpp  alpha.h  clusterfit.cpp  clusterfit.h  colourblock.h  colourfit.cpp  colourfit.h  colourset.h  config.h  maths.cpp  rangefit.cpp  rangefit.h  simd_ve.h  singlecolourfit.h  singlecolourlookup.inl  squish.cpp  squish.h
OSG/converter/windows_scripts/: convert_ondergrond.bat  convert_site13.bat  convert_site13_images.bat  convert_site13_mesh.bat  convert_site162.bat
OSGViewerConfiguration/: viewer_conf.xsd  xsd_to_python_api
PotreeConverter/: INSTALL  README.md
python/: AddRawDataItem.py  CreateDB.py  CreateOSGConfig.py  CreatePOTreeConfig.py  CreatePattyVisConfig.py  GenerateNexus.py  GenerateOSG.py  GeneratePOTree.py  GetItemLAS.py  ListRawDataItem.py  RemoveRawDataItem.py  UpdateDB.py  UpdateDBAttribute.py  UpdateDBFootprints.py  UpdateDBFootprintsAvgZ.py  UpdateDBFromOSG.py  UpdateDBItemZ.py  UpdateLASSRID.py  createjson.py  createpcjson.py  dbms_webServer.py  example_2sites.json  fill_db.py  getcutout.py  mergefootprints.py  run_potree_converter.py  utils.py  viewer_conf.xsd  viewer_conf_api.py
test/: RunTest.py  test.ini
(+403 files in other folders)
